# python-project-template

./: .pre-commit-config.yaml  README.md  actions_mapping.json  agents.py  diambra_random_agent.py  diambra_run.py  llm_chat.py  pyproject.toml  pyrightconfig.json  requirements  requirements.txt
.claude/: settings.json
.claude/agents/: implementation-auditor.md  plan-auditor.md  sw-arch.md  sw-dev.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: implementation-auditor.md  plan-auditor.md  sw-arch.md  sw-dev.md
.github/workflows/: code-formatting-check.yaml  docs-build-and-deploy.yaml  landing-page-deploy.yaml  package-publish.yaml  pytest.yaml  type-hints-check.yaml
docker/: Dockerfile
docs/source/: conf.py  index.rst
docs/source/API/: module_1.rst  module_2.rst  module_3.rst
examples/: diambra_run.py  run_vizdoom.py
landing_page/: index.html
scripts/: diambra_run.py
src/text_to_fight/: agents.py  llm_chat.py  utils.py
tests/: test_agents.py
