[project]
name = "text-to-fight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.47.0",
    "diambra>=0.0.20",
    "diambra-arena>=2.2.7",
    "matplotlib>=3.10.6",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.12",
    "vllm>=0.10.1.1",
]

[options.package_data]
text_to_fight = ["py.typed"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src", "scripts", "tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "D", "E", "F", "UP", "I", "B", "N", "S", "A", "C4", "T20"
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["D104", "D107"]  # ignore module and __init__ docstrings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
